--- a/config/database.yml
+++ b/config/database.yml
@@ -29,12 +29,12 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-#test:
-#  adapter: postgresql
-#  encoding: unicode
-#  host: localhost
-#  database: bravado
-#  pool: 5
-#  username: bravado
-#  password: bravado
-#  timeout: 5000
+test:
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  database: bravado-test
+  pool: 5
+  username: bravado
+  password: bravado
+  timeout: 5000
